--- a/frontweb/package.json
+++ b/frontweb/package.json
@@ -11,8 +11,10 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "apexcharts": "^3.35.5",
     "axios": "^0.27.2",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
     "react-scripts": "5.0.1",
